the top of your script (or in your "site" file):

  (read-enable 'positions)
  (debug-enable 'debug)

** Backtraces in scripts

It is now possible to get backtraces in scripts.

Put

  (debug-enable 'debug 'backtrace)

at the top of the script.

(The first options enables the debugging evaluator.
 The second enables backtraces.)

* Changes to the scm_ interface

** Port internals: the rw_random variable in the scm_port structure
must be set to non-zero in any random access port.  In recent Guile
releases it was only set for bidirectional random-access ports.

** Port internals: the seek ptob procedure is now responsible for
resetting the buffers if required.  The change was made so that in the
special case of reading the current position (i.e., seek p 0 SEEK_CUR)
the fport and strport ptobs can avoid resetting the buffers,
in particular to avoid discarding unread chars.  An existing port
type can be fixed by adding something like the following to the
beginning of the ptob seek procedure:

      if (pt->rw_active == SCM_PORT_READ)
	scm_end_input (object);
      else if (pt->rw_active == SCM_PORT_WRITE)
	ptob->flush (object);

although to actually avoid resetting the buffers and discard unread
chars requires further hacking that depends on the characteristics
of the ptob.

* Changes to the networking interfaces:

** New functions: htons, ntohs, htonl, ntohl: for converting short and
long integers between network and host format.  For now, it's not
particularly convenient to do this kind of thing, but consider:

(define write-network-long
  (lambda (value port)
    (let ((v (make-uniform-vector 1 1 0)))
      (uniform-vector-set! v 0 (htonl value))
      (uniform-vector-write v port))))

(define read-network-long
  (lambda (port)
    (let ((v (make-uniform-vector 1 1 0)))
      (uniform-vector-read! v port)
      (ntohl (uniform-vector-ref v 0)))))

** If inet-aton fails, it now throws an error with key 'misc-error