@@ -1,3 +1,9 @@
+1999-12-04  Gary Houston  <ghouston@freewire.co.uk>
+
+	* ports.c (scm_port_closed_p): new procedure, implements 
+	"port-closed?" suggested by Bernard Urban.
+	ports.h: added prototype, removed the SCM_P macros.
+
 1999-11-30  Gary Houston  <ghouston@freewire.co.uk>
 
 	* unif.h: added some comments, removed the SCM_P macros.
